# wordgen

./: CMakeLists.txt
data/: words1.txt
src/: main  main.cpp
